--- a/templates/comms/dogs.html
+++ b/templates/comms/dogs.html
@@ -40,7 +40,7 @@
         <a href="/{{post.post_code}}/{{post.post_slug}}" class="option"> 
             <h1>Content</h1>
         </a>
-        <a href="/ws/{{post.post_code}}/{{post.post_slug}}/chat" class="option"> 
+        <a href="/ws/{{post.post_code}}/{{post.post_slug}}/chat" class="option" id="chat-option"> 
             <h1>Chat</h1>
         </a>
         <a href="/{{post.post_code}}/{{post.post_slug}}/counters" class="option">
