--- a/templates/post/write.html
+++ b/templates/post/write.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. From the chillest chats to virtual scream-offs, create a profile and experience it all!" />
+    <meta name="description" content="Chat and Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. It’s completely anonymous, so create a quick profile and experience it all!" />
     <link rel="stylesheet" href="{% static 'styles/post.css' %}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,14 +20,14 @@
     <link rel="mask-icon" href="{% static 'favicon_package/safari-pinned-tab.svg' %}" color="#f28500">
     <meta name="msapplication-TileColor" content="#f28500">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Bantopia: The Choice Arena"/>
+    <meta property="og:title" content="Bantopia: The Social Forum"/>
     <meta property="og:url" content="https://bantopia.com/">
-    <meta property="og:description" content="Argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. From the chillest chats to virtual scream-offs, create a profile and experience it all!" />
+    <meta property="og:description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. It’s completely anonymous, so create a quick profile and experience it all!" />
     <meta property="og:image" content="{% static 'images/Poster.png' %}" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://bantopia.com/" />
-    <meta property="twitter:title" content="Bantopia: The Choice Arena" />
-    <meta property="twitter:description" content="Argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. From the chillest chats to virtual scream-offs, create a profile and experience it all!" />
+    <meta property="twitter:title" content="Bantopia: The Social Forum" />
+    <meta property="twitter:description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. It’s completely anonymous, so create a quick profile and experience it all!" />
     <meta property="twitter:image" content="{% static 'images/Poster.png' %}" />
     <meta name="theme-color" content="#ffffff">
     <title>{{ tab_text }} | Bantopia</title>
