--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -56,9 +56,9 @@
                             <button type="submit" id="green-choice" name="green-choice" class="dashboard-color green-color" value="GR"></button>
                             <button type="submit" id="red-choice" name="red-choice" class="dashboard-color red-color" value="RE"></button>
                             <button type="submit" id="purple-choice" name="purple-choice" class="dashboard-color purple-color" value="PU"></button>
-                            <button type="submit" id="pink-choice" name="pink-choice" class="dashboard-color pink-color" value="PI"></button>
+                            <button type="submit" id="brown-choice" name="brown-choice" class="dashboard-color brown-color" value="BR"></button>
                             <button type="submit" id="maroon-choice" name="maroon-choice" class="dashboard-color maroon-color" value="MA"></button>
-                            <button type="submit" id="aqua-choice" name="aqua-choice" class="dashboard-color aqua-color" value="AQ"></button>
+                            <button type="submit" id="dreadnought-choice" name="dreadnought-choice" class="dashboard-color dreadnought-color" value="DR"></button>
                         </form>
                     </div>
                 </div>
