--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -138,17 +138,21 @@ input:focus:-ms-input-placeholder {
 }
 
 .navline {
-    border: 3px solid #F28500;
+    border: 3px solid #000000;
     width: 90%;
     margin: auto;
 }
 
-.trending-border {
-    border-color: #00baf2 !important;
+.active-new-link {
+    color: #f28500 !important;
 }
 
-.controversial-border {
-    border-color: #5934ff !important;
+.active-trending-link {
+    color: #00baf2 !important;
+}
+
+.active-controversial-link {
+    color: #5934ff !important;
 }
 
 .index-mobile-navbar {
@@ -175,13 +179,14 @@ input:focus:-ms-input-placeholder {
     flex-direction: column;
     width: 50%;
     min-height: 0;
+    position: relative;
 }
 
 .search-term-container {
     width: 100%;
     z-index: 1;
     background-color: white;
-    border-bottom: 6px solid #F28500;
+    border-bottom: 6px solid #000;
 }
 
 .post-scroll {
@@ -193,15 +198,48 @@ input:focus:-ms-input-placeholder {
 }
 
 .new-rail {
-    background: linear-gradient(#ffdfb9, #ffdfb9) no-repeat center/50px 100%; /* Vertical line down the center*/
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    height: 100%;
+    width: 46px;
+    z-index: -1;
+    background-color: #000;
+    border-left: 5px solid #000;
+    border-right: 5px solid #000;
+    transform: translate(-50%);
+    box-shadow: 0px -5px black;
 }
 
 .trending-rail {
-    background: linear-gradient(#5cd9ff, #5cd9ff) no-repeat center/50px 100%; /* Vertical line down the center*/
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    height: 100%;
+    width: 46px;
+    z-index: -1;
+    background-color: #00baf2;
+    border-left: 5px solid #000;
+    border-right: 5px solid #000;
+    transform: translate(-50%);
+    box-shadow: 0px -5px black;
 }
 
 .controversial-rail {
-    background: linear-gradient(#5934ffb9, #5934ffb9) no-repeat center/50px 100%; /* Vertical line down the center*/
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    height: 100%;
+    width: 46px;
+    z-index: -1;
+    background-color: #5934ff;
+    border-left: 5px solid #000;
+    border-right: 5px solid #000;
+    transform: translate(-50%);
+    box-shadow: 0px -5px black;
 }
 
 .post-scroll {
@@ -238,7 +276,11 @@ input:focus:-ms-input-placeholder {
     font-size: 20px;
     text-align: center;
     color: white;
-    margin: 3px 0;
+    margin: 17.5px 0 2.5px 0;
+}
+
+.post-label:nth-child(2) { /* First post label */
+    margin: 2.5px 0 2.5px 0;
 }
 
 .post {
@@ -247,26 +289,76 @@ input:focus:-ms-input-placeholder {
     background-color: white;
 }
 
+/*
 .post:nth-child(1) {
     margin-top: 25px;
+}*/
+
+.post-box {
+    width: 100%;
 }
 
 .post {
     position: relative;
-    margin: 0px 15px 0px 15px;
+    margin: 0 15px;
     text-decoration: none;
     cursor: pointer;
-    border: 5px solid #f28500;
+    border: 5px solid #000;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
-    overflow: hidden;
-    border-radius: 15px;
+    border-radius: 0;
     box-sizing: border-box;
     transition: transform .2s ease-in-out; 
 }
 
-.post:hover {
-    transform: scale(1.025);
+.right-post-side {
+    position: absolute;
+    right: -20px;
+    height: calc(100% + 10px);
+    width: 15px;
+    bottom: -12.5px;
+    transform: translateZ(1px) skewY(45deg);
+    border-left: none;
+    background-color: #000;
+    box-sizing: border-box;
+    padding: 5px;
+    padding-left: 0;
+    box-shadow: -0.5px 0.5px #000;
 }
+
+.right-post-face {
+    background-color: #f28500;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.bottom-post-side {
+    position: absolute;
+    bottom: -20px;
+    width: calc(100% + 10px);
+    max-width: calc(100% + 10px);
+    height: 15px;
+    left: 2.5px;
+    transform: translateZ(1px) skewX(45deg);
+    background-color: #000;
+    outline: 1px solid transparent;
+    box-sizing: border-box;
+    padding: 5px;
+    padding-top: 0;
+    box-shadow: 0px -0.1px #000;
+}
+
+.bottom-post-face {
+    background-color: #f28500;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+/*
+.post:hover {
+    transform: scale(1.02);
+}
+*/
 
 .treding-post-border {
     border-color: #00baf2 !important;
@@ -377,7 +469,8 @@ input:focus:-ms-input-placeholder {
 }
 
 .post-counter-ticker-wrapper {
-    border-top: 5px solid #F28500;
+    overflow-x: hidden;
+    border-top: 5px solid #000;
 }
 
 .post-counter-ticker h2 {
@@ -410,7 +503,7 @@ input:focus:-ms-input-placeholder {
 }
 
 .post-div {
-    border: 2.5px solid #F28500;
+    border: 2.5px solid #000;
 }
 
 .command-border {
@@ -424,7 +517,7 @@ input:focus:-ms-input-placeholder {
 .message-bar {
     display: inline-flex;
     padding-left: 15px;
-    border-top: 5px solid #f28500;
+    border-top: 5px solid #000;
 }
 
 .recent-message {
@@ -476,7 +569,7 @@ input:focus:-ms-input-placeholder {
     align-items: center;
     flex: 1;
     min-height: 0;
-    border: 4px solid #f28500;
+    border: 4px solid #000;
     box-shadow: 0px 10px 22px -3px rgba(0,0,0,0.1);
 }
 
@@ -504,7 +597,7 @@ input:focus:-ms-input-placeholder {
     color: black;
     font-weight: 600;
     width: 100%;
-    border-bottom: 4px solid #f2850068;
+    border-bottom: 4px solid #000000;
 }
 
 .history a {
@@ -512,7 +605,7 @@ input:focus:-ms-input-placeholder {
     padding: 5px 10px;
     padding-bottom: 1vw;
     text-decoration: none;
-    color: #000;
+    color: #000000;
 }
 
 .history-empty-splash {
@@ -526,7 +619,7 @@ input:focus:-ms-input-placeholder {
 
 .side-div {
     width: 1000vw;
-    border: 2px solid #f28500;
+    border: 2px solid #000;
 }
 
 .watchlist {
@@ -535,11 +628,11 @@ input:focus:-ms-input-placeholder {
     align-items: center;
     flex: 1;
     min-height: 0;
-    border: 4px solid #f28500;
+    border: 4px solid #000000;
     box-shadow: 0px 10px 22px -3px rgba(0,0,0,0.1);
 }
 
-.watchlist ul {
+.watchlist ul { 
     overflow-y: scroll;
     overflow-x: hidden;
     list-style: none;
@@ -561,7 +654,7 @@ input:focus:-ms-input-placeholder {
     font-size: 1.2vw;
     color: black;
     font-weight: 500;
-    border-bottom: 4px solid #f2850068;
+    border-bottom: 4px solid #000000;
     width: 100%;
 }
 
@@ -1019,6 +1112,19 @@ input:focus:-ms-input-placeholder {
         color: #000;
     }
 
+    .new-mobile-border {
+        border-bottom: 5px solid #f28500 !important;
+    }
+    
+    .trending-mobile-border {
+        border-bottom: 5px solid #00baf2 !important;
+    }
+    
+    .controversial-mobile-border {
+        border-bottom: 5px solid #5934ff !important;
+    }
+    
+
     .navline {
         display: none;
     }
@@ -1036,6 +1142,10 @@ input:focus:-ms-input-placeholder {
 
     .search-term-container {
         display: none;
+    }
+
+    .post {
+        margin: 0px 20px 0 5px;
     }
 
     .post:hover {
