--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="content">
         <div class="left">
-            <div class="sort">
+            <div class="sort new-border" id="sort">
                 <a id="new" href="/"><span>New</span></a>
                 <a id="trending" href="/?sort=trending"><span>Trending</span></a>
                 <a id="controversial" href="/?sort=controversial"><span>Controversial</span></a>                
@@ -62,38 +62,47 @@
             <div class="search-term-container hidden" id="search-term-container">
                 <h1>Search Word: <span class="search-quote">"</span><span id="search-term"></span><span class="search-quote">"</span></h1>
             </div>
-            <div class="post-scroll new-rail" id="post-scroll">
+            <div class="post-scroll">
+                <div class="new-rail" id="rail"></div>
                 {% for post in posts %}
                 <h1 class="post-label"><i>#{{ forloop.counter }}</i></h1>
-                <a href="/ws/{{post.post_code}}/{{post.post_slug}}/chat" class="post nick-left-in nick-right-in">
-                    {% if post.post_type == "DE" %}
-                    <h1 class="post-title"><span class="post-title-DE">Declaration:</span> {{post.post_title | truncatesmart:60}}</h1>
-                    {% elif post.post_type == "TH" %}
-                    <h1 class="post-title"><span class="post-title-TH">Theory:</span> {{post.post_title | truncatesmart:60}}</h1>
-                    {% elif post.post_type == "QU" %}
-                    <h1 class="post-title"><span class="post-title-QU">Question:</span> {{post.post_title | truncatesmart:60}}</h1>
-                    {% endif %}
-                    <div class="post-counter-ticker-wrapper">
-                        <div class="post-counter-ticker">
-                            {% if post.counters %} 
-                                <h2 class="post-counter">{% for i in 12|times %}{{ post.counters|safe }} {% endfor %}</h2>
-                            {% else %}
-                                <h2 class="post-counter">{{ post.ticker_text|safe }}</h2>
-                            {% endif %}
-                        </div>
-                    </div>
-                    <hr class="post-div">
-                    <h4 class="post-paragraph">{{post.post_desc | truncate:40}}</h4>
-                    {% if post.last_message %}
-                        {% if post.pk in user_notified_set or not user.is_authenticated %}
-                        <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon post-icon-active"><h1 class="recent-message">New Message<span class="recent-message-content">:  <span class="recent-message-bracket">{</span>{{ post.last_message|truncatesmart:35 }}<span class="recent-message-bracket">}</span></span></h1></div>
-                        {% else %}
-                        <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon"><h1 class="recent-message">Last Message<span class="recent-message-content">:  <span class="recent-message-bracket">{</span>{{ post.last_message|truncatesmart:35 }}<span class="recent-message-bracket">}</span></span></h1></div>
+                <div href="" class="post-box">
+                    <a href="/ws/{{post.post_code}}/{{post.post_slug}}/chat" class="post nick-left-in nick-right-in border">
+                        {% if post.post_type == "DE" %}
+                        <h1 class="post-title"><span class="post-title-DE">Declaration:</span> {{post.post_title | truncatesmart:60}}</h1>
+                        {% elif post.post_type == "TH" %}
+                        <h1 class="post-title"><span class="post-title-TH">Theory:</span> {{post.post_title | truncatesmart:60}}</h1>
+                        {% elif post.post_type == "QU" %}
+                        <h1 class="post-title"><span class="post-title-QU">Question:</span> {{post.post_title | truncatesmart:60}}</h1>
                         {% endif %}
-                    {% else %}
-                    <div class="message-bar"><h1 class="recent-message"><span>This chat is totally empty!</span></h1></div>
-                    {% endif %}
-                </a>
+                        <div class="post-counter-ticker-wrapper">
+                            <div class="post-counter-ticker">
+                                {% if post.counters %} 
+                                    <h2 class="post-counter">{% for i in 12|times %}{{ post.counters|safe }} {% endfor %}</h2>
+                                {% else %}
+                                    <h2 class="post-counter">{{ post.ticker_text|safe }}</h2>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <hr class="post-div">
+                        <h4 class="post-paragraph">{{post.post_desc | truncate:40}}</h4>
+                        {% if post.last_message %}
+                            {% if post.pk in user_notified_set or not user.is_authenticated %}
+                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon post-icon-active"><h1 class="recent-message">New Message<span class="recent-message-content">:  <span class="recent-message-bracket">{</span>{{ post.last_message|truncatesmart:35 }}<span class="recent-message-bracket">}</span></span></h1></div>
+                            {% else %}
+                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon"><h1 class="recent-message">Last Message<span class="recent-message-content">:  <span class="recent-message-bracket">{</span>{{ post.last_message|truncatesmart:35 }}<span class="recent-message-bracket">}</span></span></h1></div>
+                            {% endif %}
+                        {% else %}
+                        <div class="message-bar"><h1 class="recent-message"><span>This chat is totally empty!</span></h1></div>
+                        {% endif %}
+                        <div class="right-post-side">
+                            <div class="right-post-face"></div>
+                        </div>
+                        <div class="bottom-post-side">
+                            <div class="bottom-post-face"></div>
+                        </div>
+                    </a>
+                </div>
                 {% endfor %}
             </div>
         </div>
