--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -181,30 +181,28 @@ input:focus:-ms-input-placeholder {
     padding-bottom: 25px;
 }
 
-#rail {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    height: 100%;
-    width: 60px;
-    z-index: -1;
-    border-left: 5px solid #000;
-    border-right: 5px solid #000;
-    transform: translate(-50%);
-    box-shadow: 0px -5px black;
+.new-face {
+    background-color: #fff !important;
 }
 
-.new-rail {
-    background-color: #000;
+.new-face i {
+    color: #000 !important;
 }
 
-.trending-rail {
-    background-color: #00baf2;
+.trending-face {
+    background-color: #00baf2 !important;
 }
 
-.controversial-rail {
-    background-color: #5934ff;
+.trending-face i {
+    color: #fff !important;
+}
+
+.controversial-face {
+    background-color: #5934ff !important;
+}
+
+.controversial-face i {
+    color: #fff !important;
 }
 
 .post-scroll {
@@ -237,25 +235,27 @@ input:focus:-ms-input-placeholder {
 }
 
 .post-label-box {
-    /*
     position: relative;
     border-left: 5px solid #000;
     border-right: 5px solid #000;
-    background-color: #fff;*/
+    background-color: #fff;
+    flex: 1;
 }
+
+/*
+.post-label-box:nth-child(1) {
+    border-top: 5px solid #000;
+}*/
 
 .post-label {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     text-align: center;
-    margin: 17.5px 0 5px 0px;
-    color: white;
+    margin: 2px 10px;
+    color: black;
 }
 
-.post-label-box:nth-child(2) > .post-label { /* First post label */
-    margin: 2.5px 0 2.5px 0;
-}
-/*
+
 .right-label-side {
     position: absolute;
     right: -20px;
@@ -295,10 +295,10 @@ input:focus:-ms-input-placeholder {
 }
 
 .bottom-label-face {
-    background: #f28500;
+    background-color: #fff;
     height: 100%;
     box-sizing: border-box;
-}*/
+}
 
 .post {
     display: flex;
@@ -308,6 +308,7 @@ input:focus:-ms-input-placeholder {
 
 .post-box {
     width: 95%;
+    transition: transform .2s ease-in-out; 
 }
 
 .post {
@@ -316,7 +317,6 @@ input:focus:-ms-input-placeholder {
     text-decoration: none;
     cursor: pointer;
     border: 5px solid #000;
-    box-shadow: 20px 20px 15px -3px rgba(0,0,0, 0.4);
     border-radius: 0;
     box-sizing: border-box;
     transition: transform .2s ease-in-out; 
@@ -358,16 +358,14 @@ input:focus:-ms-input-placeholder {
     padding: 5px;
     padding-top: 0;
     box-shadow: 0px -0.1px #000;
+    z-index: 0 !important;
 }
 
 .bottom-post-face {
-    background: #f28500;
+    background-color: #f28500;
     height: 100%;
     box-sizing: border-box;
-}
-
-.post:hover {
-    transform: scale(1.01);
+    z-index: 0 !important;
 }
 
 .treding-post-border {
@@ -1144,6 +1142,7 @@ input:focus:-ms-input-placeholder {
     }
 
     .post {
+        box-shadow: 20px 20px 15px -3px rgba(0,0,0, 0.4);
         margin: 0px 20px 0 5px;
     }
 
