--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -242,11 +242,6 @@ input:focus:-ms-input-placeholder {
     flex: 1;
 }
 
-/*
-.post-label-box:nth-child(1) {
-    border-top: 5px solid #000;
-}*/
-
 .post-label {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
@@ -1137,8 +1132,16 @@ input:focus:-ms-input-placeholder {
         display: none;
     }
 
+    .post-scroll {
+        padding-top: 5px;
+    }
+
     .post-box {
         width: 100%;
+    }
+
+    .post-label-box:nth-child(1) {
+        border-top: 5px solid #000;
     }
 
     .post {
