--- a/templates/comms/content.html
+++ b/templates/comms/content.html
@@ -38,7 +38,7 @@
             <h1>Back</h1>
         </a>
         <a href="/{{post.post_code}}/{{post.post_slug}}" class="option"> 
-            <h1>Content</h1>
+            <h1>Context</h1>
         </a>
         <a href="/ws/{{post.post_code}}/{{post.post_slug}}/chat" class="option" id="chat-option"> 
             <h1>Chat</h1>
